Pug templating engine and associated capabilities

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
-<html>
-<head>
+
+<html lang="is">
+  <head>
+    <title>Egill Ian CV</title>
     <link rel="stylesheet" href="/css/index.css"/>
-</head>
+  </head>
   <body>
     <div class="header">
       <h1>Egill Ian Guðmundsson</h1>
       <h2>Hugbúnaðarverkfræðinemi</h2>
-      <nav>
-        Navbar with some links
-      </nav>
+      <nav>Navbar with some links</nav>
     </div>
-
     <div class="mainContainer">
       <div class="contact">
         <h3>Upplýsingar</h3>
@@ -19,7 +18,6 @@
         <p>Sími: 899-3988</p>
         <p>Netfang: egill.ian1@gmail.com</p>
         <p>GitHub: egillian1</p>
-
       </div>
       <div class="info">
         <h3>Menntun</h3>
@@ -28,8 +26,7 @@
           <div class="infoEntry">
             <h4>Háskóli Íslands</h4>
             <div>Hugbúnaðarverkfræði</div>
-            <p>Er að klára seinasta misserði í B.S. námi.
-            Áætluð útskrift: Vor 2017</p>
+            <p>Er að klára seinasta misserið í B.S. námi.</p>Áætluð útskrift: Vor 2017
           </div>
         </div>
         <div class="infoRow">
@@ -45,7 +42,7 @@
           <div class="infoEntry">
             <h4>Colegio Bilingue de Palmares</h4>
             <div>Skiptinemi</div>
-            <p>Heils árs dvöl í Costa Rica á vegum AFS</p>
+            <p>Heils árs dvöl á vegum AFS í Costa Rica</p>
           </div>
         </div>
         <h3>Starfsreynsla</h3>
@@ -54,8 +51,7 @@
           <div class="infoEntry">
             <h4>Háskóli Íslands</h4>
             <div>Aðstoðarkennari</div>
-            <p>Aðstoð í námskeiðinu Þróun Hugbúnaðar
-            undir leiðsögn Matthias Book</p>
+            <p>Aðstoð í námskeiðinu Þróun Hugbúnaðar undir</p>leiðsögn Matthias Book
           </div>
         </div>
         <div class="infoRow">
@@ -63,8 +59,7 @@
           <div class="infoEntry">
             <h4>Háskóli Íslands</h4>
             <div>Aðstoðarkennari</div>
-            <p>Aðstoð í námskeiðinu Vefforritun
-            undir leiðsögn Ólafs Sverris Kjartanssonar</p>
+            <p>Aðstoð í námskeiðinu Vefforritun undir</p>leiðsögn Ólafs Sverris Kjartanssonar
           </div>
         </div>
         <div class="infoRow">
@@ -72,7 +67,7 @@
           <div class="infoEntry">
             <h4>From Iceland</h4>
             <div>Ferðamálaráðgjafi</div>
-            <p>Bókun og skipulagning ferða og gagna</p>
+            <p>bókun og skipulagning ferða og gagna</p>
           </div>
         </div>
         <div class="infoRow">
@@ -88,8 +83,7 @@
           <div class="infoEntry">
             <h4>Íslenski Barinn</h4>
             <div>Þjónn í sal og barþjónn</div>
-            <p> Almenn störf, skipulagning á móttöku
-            stórra hópa</p>
+            <p>Almenn störf, skipulagning á móttöku stórra hópa</p>
           </div>
         </div>
         <div class="infoRow">
@@ -97,8 +91,7 @@
           <div class="infoEntry">
             <h4>Ministerio de Salud de Costa Rica</h4>
             <div>Gagnavinnsla</div>
-            <p>Skráning og úrvinnsla gagna hjá
-            Heilbrigðisráðuneyti Costa Rica</p>
+            <p>Skráning og úrvinnsla gagna hjá Heilbrigðisráðuneyti</p>Costa Rica
           </div>
         </div>
         <div class="infoRow">
@@ -110,6 +103,5 @@
         </div>
       </div>
     </div>
-
   </body>
 </html>
